<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddTaskActivityAddTaskBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddTaskActivity">

    <EditText
        android:id="@+id/AddTextActivityTextViewInputEntry"
        android:layout_width="322dp"
        android:layout_height="64dp"
        android:layout_marginBottom="332dp"
        android:ems="10"
        android:hint="@string/task_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTextActivityTextViewInputTask" />

    <TextView
        android:id="@+id/AddTextActivityTextView"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="1dp"
        android:text="@string/add_task_Activity_Add_Task"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/TeamSelectionSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddTextActivityTextViewInputTask"
        android:layout_width="319dp"
        android:layout_height="64dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/AddTextActivityTextViewInputEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTextActivityTextView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/AddTextActivityTextViewAddTaskBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="124dp"
        android:text="@string/add_task_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTextActivityTextViewInputEntry" />

    <TextView
        android:id="@+id/AddTextActivityTextViewHiddenTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="225dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="96dp"
        android:text="@string/not_submitted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTextActivityTextViewInputEntry" />

    <Spinner
        android:id="@+id/AddTaskViewSpinner"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/AddTextActivityTextViewAddTaskBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTextActivityTextViewHiddenTxt"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/TeamSelectionSpinner"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/AddTextActivityTextViewInputTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTextActivityTextView"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>