<resources>
    <string name="app_name">Taskmaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="my_task">My Task</string>
    <string name="add_task_Activity_Add_Task">Add Task</string>
    <string name="do_something">Do Something</string>
    <string name="add_task_Btn">ADD TASK</string>
    <string name="back">Back</string>
    <string name="all_tasks_Title">All Tasks</string>
    <string name="settings">Settings</string>
    <string name="create_a_user_name">Create a User Name</string>
    <string name="save">Save</string>
    <string name="enter_username_here">Enter UserName here</string>
    <string name="user_settings">User Settings</string>
    <string name="take_out_the_trash">Take out the trash</string>
    <string name="make_my_bed">Make my bed</string>
    <string name="mow_the_lawn">Mow The Lawn</string>
    <string name="task">Task</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_aenean_viverra_finibus_laoreet_suspendisse_nec_viverra_metus_quis_tristique_mauris_nunc_quis_lacinia_dolor_cras_ac_molestie_massa_eu_ultricies_tortor_nam_ac_tincidunt_felis_vitae_aliquet_orci_morbi_ultricies_eu_tellus_quis_pharetra_sed_semper_libero_sed_blandit_condimentum_ligula_magna_accumsan_mi_in_imperdiet_mauris_lacus_ac_tortor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean viverra finibus laoreet. Suspendisse nec viverra metus, quis tristique mauris. Nunc quis lacinia dolor. Cras ac molestie massa, eu ultricies tortor. Nam ac tincidunt felis, vitae aliquet orci. Morbi ultricies eu tellus quis pharetra. Sed semper, libero sed blandit condimentum, ligula magna accumsan mi, in imperdiet mauris lacus ac tortor.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="textviewTitle">TextView</string>
    <string name="not_submitted">Not Submitted</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="verify_account">Verify Account</string>
    <string name="username">Username</string>
</resources>